[package]
name = "vec2"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["vec2", "vector", "2"]
description = "rust vector 2 functions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-vec2.git"
homepage = "https://github.com/nathanfaucett/rs-vec2"

[dependencies]
approx_eq = { git = "https://github.com/nathanfaucett/rs-approx_eq.git" }
num = { git = "https://github.com/nathanfaucett/rs-num.git" }
signed = { git = "https://github.com/nathanfaucett/rs-signed.git" }
vec3 = { git = "https://github.com/nathanfaucett/rs-vec3.git" }
